Add curated gallery ordering
